@@ -1,5 +1,11 @@
 Changes with APR-util b1  
 
+  *) apr_bucket_file_create() and apr_bucket_file_make() now take a pool
+     parameter which is the pool into which any needed data structures
+     should be created during file_read().  This is used for MMAPing the
+     file and reopening the file if the original apr_file_t is in XTHREAD
+     mode.  [Cliff Woolley]
+
   *) apr_brigade_partition() now returns an apr_status_t. [Cliff Woolley]
 
   *) Add MD4 implementation in crypto.  [Sander Striker, Justin Erenkrantz]
